style.css
* {
  margin: 0;
}

body {
  background: url('https://quique.gq/assets/bgscroll_2x.png');
  margin: 0px;
  display:inline-block;
  font-family: 'Verdana', monospace;
  font-size: 18px;
  text-align: center;
  image-rendering: pixelated;
}

p, h1, h2, h3, h4, h5, h6 {
  margin: 4px;
}

main {
  min-height: calc(100vh - 40px);
}

header {
  margin-bottom: 8px;
  text-align: left;
}

footer {
  height: 40px;
}

header, footer {
  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.03)), #FFFFFF;
  min-width: 100vw;
}

nav > ul {
  padding: 0;
  margin-bottom: 8px;
  list-style-type: none;
}

nav > ul > li {
  padding: 0 8px 0 8px;
  display: inline-block;
}

nav > ul > li > a {
  border-bottom: 1px solid;
  color: #000000;
  text-decoration: none;
}

p {
  margin: 8px;
}

hr {
  margin: auto;
  width: 99%;
}

.noscript {
  background: #FFFFFF;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  font-size: 64px;
}

.flexContainer {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: flex-start;
}

.flexItem {
  border: 1px solid #000000;
  padding: 15px;
  margin: 20px;
  background: #FFFFFF;
  box-shadow: 1px 1px 4px #000000;
  width: 225px;
  height: 225px;
  text-align: center;
}

.flexItem > img {
  border: 1px solid #000000;
  width: 150px;
  height: 150px;
}

.gBlur {
  outline: 3px solid #FF0000;
}

#gContainer {
  border: none;
  margin: 8px;
  position: relative;
}

#gBlurNote {
  height: 0;
  color: #FF0000;
  text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000, -1px -1px 0 #000;
  font-weight: bold;
  transform: translateY(-50px);
}

#gInstructions {
  margin: auto;
  width: 80%;
}

